// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParticipantsList should render correctly as moderator 1`] = `
<div
  id="portal"
>
  <div
    class="portal"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <aside
            class="participants"
          >
            <header
              class="participants__header"
            >
              <div
                class="participants__header-title"
              >
                <h4
                  class="participants__header-text"
                >
                  Participants
                </h4>
                <span
                  class="participants__header-number"
                >
                   
                  3
                   
                </span>
              </div>
              <svg
                class="header__icon"
              >
                icon-search.svg
              </svg>
              <input
                class="participants__header-input"
                placeholder="Search"
              />
            </header>
            <ul
              class="participants__list"
            >
              <div
                class="list__header"
              >
                <label>
                  Name
                </label>
                <label>
                  Admin
                </label>
              </div>
              <li
                class="participants__list-item"
              >
                <div
                  class="participants-avatar"
                >
                  <div
                    class="user__initials"
                    title="Participant 0"
                  >
                    P0
                  </div>
                </div>
                <button
                  class="toggle-button toggle-button--left participant__permission-toggle"
                />
              </li>
              <li
                class="participants__list-item"
              >
                <div
                  class="participants-avatar"
                >
                  <div
                    class="user__initials"
                    title="Participant 1"
                  >
                    P1
                  </div>
                </div>
                <button
                  class="toggle-button toggle-button--left participant__permission-toggle"
                />
              </li>
              <li
                class="participants__list-item"
              >
                <div
                  class="participants-avatar"
                >
                  <div
                    class="user__initials"
                    title="Participant 2"
                  >
                    P2
                  </div>
                </div>
                <button
                  class="toggle-button toggle-button--left participant__permission-toggle"
                />
              </li>
            </ul>
          </aside>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`ParticipantsList should render correctly on close 1`] = `<div />`;

exports[`ParticipantsList should render correctly on filtered participants 1`] = `
<div
  id="portal"
>
  <div
    class="portal"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <aside
            class="participants"
          >
            <header
              class="participants__header"
            >
              <div
                class="participants__header-title"
              >
                <h4
                  class="participants__header-text"
                >
                  Participants
                </h4>
                <span
                  class="participants__header-number"
                >
                   
                  3
                   
                </span>
              </div>
              <svg
                class="header__icon"
              >
                icon-search.svg
              </svg>
              <input
                class="participants__header-input"
                placeholder="Search"
              />
            </header>
            <ul
              class="participants__list"
            >
              <div
                class="list__header"
              >
                <label>
                  Name
                </label>
              </div>
              <li
                class="participants__list-item"
              >
                <div
                  class="participants-avatar"
                >
                  <div
                    class="user__initials"
                    title="Participant 0"
                  >
                    P0
                  </div>
                </div>
              </li>
            </ul>
          </aside>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`ParticipantsList should render correctly on open 1`] = `
<div
  id="portal"
>
  <div
    class="portal"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <aside
            class="participants"
          >
            <header
              class="participants__header"
            >
              <div
                class="participants__header-title"
              >
                <h4
                  class="participants__header-text"
                >
                  Participants
                </h4>
                <span
                  class="participants__header-number"
                >
                   
                  3
                   
                </span>
              </div>
              <svg
                class="header__icon"
              >
                icon-search.svg
              </svg>
              <input
                class="participants__header-input"
                placeholder="Search"
              />
            </header>
            <ul
              class="participants__list"
            >
              <div
                class="list__header"
              >
                <label>
                  Name
                </label>
              </div>
              <li
                class="participants__list-item"
              >
                <div
                  class="participants-avatar"
                >
                  <div
                    class="user__initials"
                    title="Participant 0"
                  >
                    P0
                  </div>
                </div>
              </li>
              <li
                class="participants__list-item"
              >
                <div
                  class="participants-avatar"
                >
                  <div
                    class="user__initials"
                    title="Participant 1"
                  >
                    P1
                  </div>
                </div>
              </li>
              <li
                class="participants__list-item"
              >
                <div
                  class="participants-avatar"
                >
                  <div
                    class="user__initials"
                    title="Participant 2"
                  >
                    P2
                  </div>
                </div>
              </li>
            </ul>
          </aside>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;
